# pg_parse

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.slim  LICENSE  README-docker.md  README.md  docker-compose.yml  justfile
.claude/: settings.local.json
.github/workflows/: pull_request.yml
crates/pg_parse/: Cargo.toml  build.rs  todo.md
crates/pg_parse/examples/: api_example.rs  test_parse.rs
crates/pg_parse/src/: bindings.rs  deparse.rs  fingerprint.rs  iter_mut.rs  iter_ref.rs  lib.rs  node_enum.rs  node_mut.rs  node_ref.rs  node_structs.rs  normalize.rs  parse.rs  scan.rs  split.rs
crates/pg_parse_macros/: Cargo.toml  build.rs
crates/pg_parse_macros/src/: lib.rs  node_mut.rs  node_ref.rs  node_structs.rs  proto_analyser.rs  utils.rs
crates/pg_proto_parser/: Cargo.toml
crates/pg_proto_parser/src/: lib.rs  proto_parser.rs
prost-master/tests-2018/: Cargo.toml
wasm_example/: Cargo.toml  README.md  build_wasm.sh  build_wasm_native.sh  justfile  wasm_test.js  wasm_wrapper.c
wasm_example/src/: lib.rs
